[package]
name = "bf_run"
version = "1.0.0"
authors = ["Andreas Ejdesgaard <andreasejdesgaard@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"

[profile.release]

[dependencies]
libc = "0.2.74"
structopt = "0.3.15"
clap = { git = "https://github.com/clap-rs/clap/" }
